test/files/neg/t10296-after.check
Unused_2.scala:7: warning: private method g in object Unused is never used
  private def g(): Int = 17
              ^
1 warning
error: No warnings can be incurred under -Werror.
